to fixe scrool on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -246,8 +246,9 @@ body {
     width: 100vw;
     height: auto;
     justify-content: center;
-    background-image: url(./assets/img/desk.jpg);
+    background-image: url(./assets/img/desk_sm.png);
     background-size: cover;
+    background-position: fixed;
     background-attachment: fixed;
 
   }
